Version ClaSS-1.0.59 release (2013/12/04)
-------------------------------------------

New message for medical updates as cron jobs

New student event and message for enrolment status update as cron jobs

Added medical_log and student_event tables patches


Version ClaSS-1.0.58 release (2013/11/12)
-------------------------------------------

Added a List button to the enrolments_list page which generates the same
list in the InfoBook table.

Another fix for timing issues with the document drop.



Version ClaSS-1.0.57 release (2013/11/8)
-------------------------------------------

Tiny fix to the overall total in the report_merits_list page.

New merit option to record a second category (example being used for
core school values).

Improved the report_merits_list to allow breakdown of merits to switch
between core values and activities.

Changed the dislpay of student names in the MarkBook. Now includes
middlenames and prefrred forename.

Working on previewing image files for the skills_log in new_onereport.

Change to the transport list to include all stops on the attendance list.

Implemented the report_skills_log for file attachments and text
description. They now link to specific statements not just an area.




Version ClaSS-1.0.56 release (2013/11/3)
-------------------------------------------

Exposed the note field for fees_applied.

Added a general note field to a student's fees page using Background
type=fee.

Tiny fix to the student_reports scripts in InfoBook.

A new function under Admin to the edit subject names and to add new
subjects.



Version ClaSS-1.0.55 release (2013/10/23)
-------------------------------------------

The tinyMCE spellchecker was broken. Removed and use the native
broswer spellchecker instead.

Work in progress moving the category statements into new db tables for
the new skills log functionality.

A one-off migrate_statements() function needs to be run for
backward-compatibility.
